Comprobación del backend en Postman. Modificación de nombres para mejorar rutas.